tests/baselines/reference/unusedParametersinConstructor1.errors.txt
tests/cases/compiler/unusedParametersinConstructor1.ts(3,17): error TS6133: Parameter 'param1' has never been used.


==== tests/cases/compiler/unusedParametersinConstructor1.ts (1 errors) ====
    
    class greeter {
        constructor(param1: string) {
                    ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'param1' has never been used.
        }
    }